--- a/nov_12_2022/ServerProject/static/form.html
+++ b/nov_12_2022/ServerProject/static/form.html
@@ -3,9 +3,15 @@
 <head>
     <link rel="stylesheet" href="css.scss">
     <meta charset="UTF-8">
+    <style></style>
 </head>
 <body>
-    <div>
+    <div style="
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+">
     <form method="POST" action="/form">
         <label for="name">Name</label>
         <input type="text" name="name" value=""/>
